--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<div> Hi  this is first page </div>
+<style>
+.first{
+    color:red;
+    display: flex;
+}
+.second{
+    color:blue;
+    display: flex;
+}
+</style>
+
+<div class="first">First division box</div>
+
+<div class="second"> Hi  this is first page </div>
